--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
   --success-color: #28a745;
   --danger-color: #dc3545;
   --warning-color: #ffc107;
-  --admin-color: #b6deff;
+  --admin-color: #26547a;
   --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
